<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#FFFFFF" >
    
    <RelativeLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_dividing_line" >
    </RelativeLayout>
    
    <View 
        android:id="@+id/bottom_dividing_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/bottom_menu" 
        android:background="@color/gray"
        />

    <LinearLayout android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="8dp"
        android:orientation="horizontal" >
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/bt_homepage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bt_menu_0_homepage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_btn_homepage"
                android:textSize="11sp" />
        </LinearLayout>
                
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/bt_shoppingcart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bt_menu_1_shoppingcart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_btn_shoppingcart"
                android:textSize="11sp" />
        </LinearLayout>
                
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/bt_myaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bt_menu_2_myaccount" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_btn_myaccount"
                android:textSize="11sp" />
        </LinearLayout>
        
    </LinearLayout>
    
    
</RelativeLayout>
