<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/btn_myloves"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="6dp"
                android:paddingBottom="1dp"
                android:text="@string/myaccount_loves"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/btn_myloves_num"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="1dp"
                android:paddingBottom="6dp"
                android:text="@string/str_null"
                android:textColor="@color/white"
                android:textSize="14dp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/btn_mytrack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="6dp"
                android:paddingBottom="1dp"
                android:text="@string/myaccount_track"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/btn_mytrack_num"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="1dp"
                android:paddingBottom="6dp"
                android:text="@string/str_null"
                android:textColor="@color/white"
                android:textSize="14dp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/btn_mypurchased"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="6dp"
                android:paddingBottom="1dp"
                android:text="@string/myaccount_purchased"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/btn_mypurchased_num"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="1dp"
                android:paddingBottom="6dp"
                android:text="@string/str_null"
                android:textColor="@color/white"
                android:textSize="14dp" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@drawable/menu_1_1" />
    </ScrollView>

</LinearLayout>