<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/goods_top_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#FF5000"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp"
                android:src="@drawable/iv_goods_detail_back" />

            <TextView
                android:id="@+id/tv_top_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/goods_detail"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/iv_refresh"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp"
                android:src="@drawable/iv_goods_detail_refresh" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <com.envee.eshopping.other.EViewPage
                    android:id="@+id/iv_goodsviewpage"
                    android:layout_width="0dp"
                    android:layout_height="330dp"
                    android:layout_weight="1.0"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical|left"
                            android:text="@string/goods_name"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/tv_goods_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical|left"
                            android:layout_marginLeft="10dp"
                            android:text="@string/str_null"
                            android:textColor="#000000" />
                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:background="#CCCCCC" />

                        <ImageView
                            android:id="@+id/iv_goods_collection"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/collection_normal" />
                        
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/tv_goods_description"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical|left"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="Description of goods"
                            android:textColor="@color/gray" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="￥"
                            android:textColor="#CC3366"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/tv_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zero"
                            android:textColor="#CC3366"
                            android:textSize="22sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/monthly_sales" />

                            <TextView
                                android:id="@+id/tv_sales"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/zero" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/leave_counts" />

                            <TextView
                                android:id="@+id/tv_counts"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/zero" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/goods_createtime" />

                            <TextView
                                android:id="@+id/tv_createtime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/zero" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="5dp"
                            android:text="大小 ???" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="5dp"
                            android:text="颜色 ???" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:orientation="vertical" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="#CCCCCC" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/goods_evaluation"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <com.envee.eshopping.econtrol.GoodsEvaluateListView
                    android:id="@+id/listView_Detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cacheColorHint="#00000000" >
                </com.envee.eshopping.econtrol.GoodsEvaluateListView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/buy_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:src="@drawable/buy_now" />

    <ImageView
        android:id="@+id/put_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buy_now"
        android:layout_alignTop="@+id/buy_now"
        android:layout_marginRight="15dp"
        android:layout_toLeftOf="@+id/buy_now"
        android:src="@drawable/put_shoppingcart" />

    <LinearLayout
        android:id="@+id/all_choice_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#90000000"
        android:orientation="horizontal"
        android:visibility="gone" >
    </LinearLayout>

</RelativeLayout>